--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "vigorous-virgo",
+	"name": "devnotes.cc",
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
@@ -7,7 +7,8 @@
 		"start": "astro dev",
 		"build": "astro check && astro build",
 		"preview": "astro preview",
-		"astro": "astro"
+		"astro": "astro",
+		"deploy": "astro check && astro build & wrangler pages deploy dist"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.5.0",
@@ -15,10 +16,8 @@
 		"@astrojs/rss": "^4.0.1",
 		"@astrojs/sitemap": "^3.0.4",
 		"@astrojs/tailwind": "^5.0.4",
-		"@astrojs/vercel": "^7.0.0",
 		"@types/react": "^18.2.45",
 		"@types/react-dom": "^18.2.18",
-		"@vercel/analytics": "^1.1.1",
 		"astro": "^4.0.7",
 		"canvas-confetti": "^1.9.2",
 		"mdast-util-to-string": "^4.0.0",
